ASTRA: Release v0.1.144 metadata